--- a/scss/_variables-dark.scss
+++ b/scss/_variables-dark.scss
@@ -147,12 +147,6 @@ $form-invalid-border-color-dark:        var(--#{$prefix}danger) !default; // Boo
 $breadcrumb-divider-filter-dark:      $invert-filter !default; // Boosted mod
 
 //
-// Navs & Tabs
-//
-
-$nav-link-active-color-dark:          $supporting-orange !default; // Boosted mod
-
-//
 // Tables
 //
 
